# simple-cmake

./: CMakeLists.txt  CMakeSettings.json  NativeLibrary.cpp  NativeLibrary.h  README.md  library.h  test.cpp
lib/: CmakeLists.txt  hello.c  hello.h  sm4.c  sm4.h  sm4_aesni_x4.c  sm4_aesni_x4.h  sm4_ref.h  sm4ni.h
src/: CMakeLists.txt  main.c
